tests/analyze/core-dict-missing-hash/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: No instance of trait `hash` for type `foo`.
> 12 | 	let m = dict.insert m a 1
                ^^^^^^^^^^^

error: No instance of trait `hash` for type `foo`.
> 12 | 	let m = dict.insert m a 1
                ^^^^^^^^^^^

